<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CuisineSync</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="cuisinesync">CuisineSync</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="setting">setting</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="homepage">HomePage</string>
    <string name="my_profile">My Profile</string>
    <string name="google_">google sign</string>
    <string name="facebook_login">facebook sign. tap to log into facebook</string>
    <string name="twitter_login">twitter sign\n</string>
    <string name="explore">Explore</string>

    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">pk.eyJ1IjoiYmlramQtMjQiLCJhIjoiY2xzYXJ1cDZsMDcydzJqbHA5cDJzNmowdiJ9.yYPTKfNcRhBmrCKZfuSDTQ</string>
    <string name="eat">eat</string>
    <string name="account">account</string>
    <string name="option_get_place">Get Current Location\n</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>

</resources>